fixed extra margin on footer

--- a/client/src/scss/about.scss
+++ b/client/src/scss/about.scss
@@ -2,10 +2,15 @@
     display: flex;
     align-items: center;
     gap: 2rem;
-    min-height: calc(100vh - 80px);
+    min-height: calc(100% - 80px);
     margin-inline: auto;
     opacity: 0;
     transition: all .15s ease-out;
+    @media(max-width: 40rem){
+        flex-direction: column;
+        margin-bottom: 2rem;
+        min-height: 100vh;
+    }
     .left-section{
         flex: 1;
         box-shadow: 0 0 8px 2px rgb(183, 183, 183);
@@ -14,6 +19,11 @@
         align-items: center;
         padding-block: 2rem;
         border-radius: 0.25rem;
+        @media (max-width: 40rem){
+            box-shadow: none;
+            margin-top: 2rem;
+            padding-block-end: 0;
+        }
         .author-img{
             width: 50%;
             display: block;
@@ -33,6 +43,7 @@
             margin-inline: auto;
             margin-top: 0.5rem;
             border-top: 2px solid rgb(4, 101, 4);
+            -webkit-tap-highlight-color: transparent;
             cursor: pointer;
             a{
                 // filter: drop-shadow(0 0 1px rgba(19, 86, 4, 0.7));
@@ -47,14 +58,11 @@
     }
     .right-section {
         flex: 2;
-        span{
-            float: left;
-            font-size: 2rem;
-            margin-right: 0.4rem;
-            color: green;
-            font-weight: 700;
-        }
+        @media (max-width: 40rem){
+            padding: 0 1.5rem 1.5rem;
+         }
         p{
+            text-indent: 1.5rem;
             text-align: justify;
         }
     }
