--- a/client/src/scss/contact.scss
+++ b/client/src/scss/contact.scss
@@ -1,5 +1,5 @@
 .contact-wrapper{
-    min-height: 100vh;
+    min-height: 100%;
     opacity: 0;
     transition: all .15s ease-out;
     position: relative;
